apps/nextcloud/proxy/01_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: nextcloud
    app.kubernetes.io/component: proxy
  name: nginx
  namespace: nextcloud
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: metrics
    port: 9113
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: nextcloud
    app.kubernetes.io/component: proxy
