apps/nextcloud/proxy/05_ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
spec:
  tls:
  - hosts:
    - cloud.krupa.net.pl
    secretName: nextcloud-tls
  rules:
  - host: cloud.krupa.net.pl
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
